--- a/SimpleCalendar/SimpleCalendar.csproj
+++ b/SimpleCalendar/SimpleCalendar.csproj
@@ -77,14 +77,26 @@
       <SubType>Code</SubType>
       <DependentUpon>App.xaml</DependentUpon>
     </Compile>
+    <Compile Include="Calendario.xaml.cs">
+      <DependentUpon>Calendario.xaml</DependentUpon>
+      <SubType>Code</SubType>
+    </Compile>
+    <Compile Include="DiaCalendario.xaml.cs">
+      <DependentUpon>DiaCalendario.xaml</DependentUpon>
+      <SubType>Code</SubType>
+    </Compile>
+    <Compile Include="ItemCalendario.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Properties\WPFAssemblyInfo.cs" />
+    <Compile Include="Recordatorio.cs" />
     <Compile Include="Window1.xaml.cs">
       <SubType>Code</SubType>
       <DependentUpon>Window1.xaml</DependentUpon>
     </Compile>
   </ItemGroup>
   <ItemGroup>
+    <Page Include="Calendario.xaml" />
+    <Page Include="DiaCalendario.xaml" />
     <Page Include="Window1.xaml" />
   </ItemGroup>
   <ItemGroup>
