--- a/SimpleCalendar/SimpleCalendar.csproj
+++ b/SimpleCalendar/SimpleCalendar.csproj
@@ -32,6 +32,9 @@
     <DefineConstants>TRACE</DefineConstants>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="Gabriel.Cat.Binaris">
+      <HintPath>..\..\Gabriel.Cat.Binaris\bin\Release\Gabriel.Cat.Binaris.dll</HintPath>
+    </Reference>
     <Reference Include="Gabriel.Cat.Utilitats">
       <HintPath>..\..\Gabriel.Cat.Utilitats\Gabriel.Cat.Utilitats\bin\Release\Gabriel.Cat.Utilitats.dll</HintPath>
     </Reference>
@@ -86,6 +89,7 @@
       <SubType>Code</SubType>
     </Compile>
     <Compile Include="ItemCalendario.cs" />
+    <Compile Include="Periodo.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Properties\WPFAssemblyInfo.cs" />
     <Compile Include="Recordatorio.cs" />
