--- a/SimpleCalendar/SimpleCalendar.csproj
+++ b/SimpleCalendar/SimpleCalendar.csproj
@@ -10,6 +10,8 @@
     <AssemblyName>SimpleCalendar</AssemblyName>
     <TargetFrameworkVersion>v4.5.1</TargetFrameworkVersion>
     <AppDesignerFolder>Properties</AppDesignerFolder>
+    <TargetFrameworkProfile>
+    </TargetFrameworkProfile>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Platform)' == 'AnyCPU' ">
     <PlatformTarget>AnyCPU</PlatformTarget>
