--- a/KawaiCalendar/KawaiCalendar.csproj
+++ b/KawaiCalendar/KawaiCalendar.csproj
@@ -4,12 +4,14 @@
     <OutputType>WinExe</OutputType>
     <TargetFramework>netcoreapp3.1</TargetFramework>
     <UseWPF>true</UseWPF>
+    <ApplicationIcon>calendar-1559935_640.ico</ApplicationIcon>
   </PropertyGroup>
 
   <ItemGroup>
     <PackageReference Include="Gabriel.Cat.S.Binaris" Version="1.1.5-Preview1.0" />
     <PackageReference Include="Gabriel.Cat.S.Utilitats" Version="1.1.5.4" />
     <PackageReference Include="Gabriel.Cat.S.Wpf" Version="1.0.1-preview1.0.0" />
+    <PackageReference Include="Notifications.Wpf.Core" Version="1.3.2" />
   </ItemGroup>
 
   <ItemGroup>
