--- a/KawaiCalendar/KawaiCalendar.csproj
+++ b/KawaiCalendar/KawaiCalendar.csproj
@@ -9,6 +9,7 @@
 
   <ItemGroup>
     <PackageReference Include="Gabriel.Cat.S.Binaris" Version="1.1.5-Preview1.0" />
+    <PackageReference Include="Gabriel.Cat.S.Drawing" Version="1.1.3-Preview1" />
     <PackageReference Include="Gabriel.Cat.S.Utilitats" Version="1.1.5.4" />
     <PackageReference Include="Gabriel.Cat.S.Wpf" Version="1.0.1-preview1.0.0" />
     <PackageReference Include="Notifications.Wpf.Core" Version="1.3.2" />
